--- a/WpfApp1/Pages/Register.xaml
+++ b/WpfApp1/Pages/Register.xaml
@@ -14,8 +14,8 @@
                 <TextBox FontSize="20" x:Name="login" Width="auto" Height="30" Margin="0,16,0,132"/>
                 <TextBox FontSize="20" x:Name="password" Width="auto" Height="30" Margin="0,51,0,97"/>
                 <TextBox FontSize="20" x:Name="password2" Width="auto" Height="30" Margin="0,89,0,59"/>
-                <Button  Content="login" Width="100" Height="30" Margin="39,125,39,23"/>
-                <Label x:Name="Regin" Content="Reg in" Width="auto" Height="23" Margin="68,155,68,0" VerticalAlignment="Top"/>
+                <Button  Content="register" Width="100" Height="30" Margin="39,125,39,23" Click="OnRegin"/>
+                <Label MouseDown="Label_MouseDown" x:Name="Login" Content="Reg in" Width="auto" Height="23" Margin="68,155,68,0" VerticalAlignment="Top"/>
             </Grid>
         </Border>
     </Grid>
