--- a/WpfApp1/Pages/Main.xaml
+++ b/WpfApp1/Pages/Main.xaml
@@ -8,7 +8,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Main">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Button Click="OnAdd" Content="ADD" Height="30" VerticalAlignment="Top" Margin="10,10,704,0"/>
+        <ListBox x:Name="pagesListBox" Margin="0,62,0,0">
+        </ListBox>
     </Grid>
 </Page>
