--- a/WpfApp1/Pages/ApplicationsItem.xaml
+++ b/WpfApp1/Pages/ApplicationsItem.xaml
@@ -5,14 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="140" d:DesignWidth="800">
-    <Grid Background="WhiteSmoke">
-        <TextBlock Text="{Binding ApplicationNumber}" Width="100" Height="25" Margin="10,10,670,165"/>
-        <TextBlock Text="{Binding DateOfAddition}" Width="200" Height="25" Margin="10,54,670,121"/>
-        <TextBlock Text="{Binding Equipment}" Width="200" Height="25" Margin="10,100,570,75"/>
-        <TextBlock Text="{Binding TypeOfFault}" Width="200" Height="25" Margin="225,10,355,165"/>
-        <TextBlock Text="{Binding DescriptionOfTheProblem}" Width="200" Height="25" Margin="225,54,355,121"/>
-        <TextBlock Text="{Binding Client}" Width="200" Height="25" Margin="225,100,355,75"/>
-        <TextBlock Text="{Binding Status}" Width="200" Height="25" Margin="457,10,123,165"/>
+             d:DesignHeight="70" Width="auto">
+    <Grid Background="WhiteSmoke"  Width="auto">
+        <TextBlock Text="{Binding ApplicationNumber}" Width="100" Height="25" Margin="0,10,690,35" HorizontalAlignment="Right"/>
+        <TextBlock Text="{Binding DateOfAddition}" Width="200" Height="25" Margin="120,10,480,35"/>
+        <TextBlock Text="{Binding Equipment}" Height="25" Margin="10,40,617,5"/>
+        <TextBlock Text="{Binding TypeOfFault}" Height="25" Margin="188,40,473,5"/>
+        <TextBlock Text="{Binding DescriptionOfTheProblem}" Width="200" Height="25" Margin="400,40,200,5"/>
+        <TextBlock Text="{Binding Client}" Height="25" Margin="649,40,10,5"/>
+        <TextBlock Text="{Binding Status}" Height="25" Margin="342,10,264,35"/>
     </Grid>
 </UserControl>
